--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "antd": "^5.21.2",
+        "@ant-design/icons": "^5.5.1",
+        "antd": "^5.21.6",
         "axios": "^1.7.7",
         "bootstrap": "^5.3.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "fullstack": "file:",
+        "lucide-react": "^0.454.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.2",
