--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,32 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "main": "src/server.js",
+  "scripts": {
+    "start": "nodemon src/server.js",
+    "dev": "nodemon src/server.js"
+  },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "antd": "^5.21.6",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
-    "react-toastify": "^10.0.5"
-  }
+    "nodemailer": "^6.9.16",
+    "react-toastify": "^10.0.5",
+    "server": "file:"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
