--- a/server/src/.env
+++ b/server/src/.env
@@ -5,8 +5,9 @@ PORT=9000
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=123456  # Có thể cần mã hóa hoặc bảo vệ thông tin nhạy cảm này
-DB_DATABASE=mydatabase
+DB_PASSWORD=123  # Có thể cần mã hóa hoặc bảo vệ thông tin nhạy cảm này
+DB_NAME=mydatabase
 
 # Khóa bí mật dùng để mã hóa và giải mã token
 SECRET_KEY= Thanh05@09@03@
+YOUTUBE_API_KEY=AIzaSyBUfgLHU84Fy9RMauCwOFOtLT6xYIvfsG4
