--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.5.1",
+        "@vitejs/plugin-react": "^4.3.3",
         "antd": "^5.21.6",
         "axios": "^1.7.7",
         "bootstrap": "^5.3.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "fullstack": "file:",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.454.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
