--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.21.6",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
