--- a/server/src/.env
+++ b/server/src/.env
@@ -11,3 +11,4 @@ DB_NAME=mydatabase
 # Khóa bí mật dùng để mã hóa và giải mã token
 SECRET_KEY= Thanh05@09@03@
 YOUTUBE_API_KEY=AIzaSyBUfgLHU84Fy9RMauCwOFOtLT6xYIvfsG4
+TZ=Asia/Ho_Chi_Minh
