--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
         "react-icons": "^5.3.0",
         "react-router-dom": "^6.26.2",
         "react-toastify": "^10.0.5",
-        "sass": "^1.79.4"
+        "sass": "^1.79.4",
+        "styled-components": "^6.1.13"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
