--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "@ant-design/icons": "^5.5.1",
         "@vitejs/plugin-react": "^4.3.3",
         "antd": "^5.21.6",
+        "aos": "^2.3.4",
         "axios": "^1.7.7",
         "bootstrap": "^5.3.3",
         "cors": "^2.8.5",
