--- a/client/.gitignore
+++ b/client/.gitignore
@@ -24,5 +24,7 @@ dist-ssr
 *.sln
 *.sw?
 node_modules/
+/assets/
 /uploads/*
 /client/src/assets/uploads/courses/*
+/client/src/assets/uploads/avatar/*
