--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,10 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
+        "react-responsive": "^10.0.0",
         "react-router-dom": "^6.26.2",
         "react-toastify": "^10.0.5",
+        "react-youtube": "^10.1.0",
         "sass": "^1.79.4",
         "styled-components": "^6.1.13"
     },
