--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.11.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
+    "react-beautiful-dnd": "^13.1.1",
     "react-toastify": "^10.0.5",
     "server": "file:"
   },
