--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@shadcn/ui": "^0.0.4",
     "antd": "^5.21.6",
+    "aos": "^2.3.4",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -17,12 +19,14 @@
     "express": "^4.21.0",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.460.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "react-beautiful-dnd": "^13.1.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.13.3",
     "server": "file:"
   },
   "devDependencies": {
