--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "axios": "^1.7.7",
         "bootstrap": "^5.3.3",
         "cors": "^2.8.5",
+        "crypto-js": "^4.2.0",
         "dotenv": "^16.4.5",
         "fullstack": "file:",
         "lodash": "^4.17.21",
