--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
     "@shadcn/ui": "^0.0.4",
     "antd": "^5.21.6",
     "aos": "^2.3.4",
+    "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
@@ -29,7 +31,8 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.13.3",
-    "server": "file:"
+    "server": "file:",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
