--- a/server/src/.env
+++ b/server/src/.env
@@ -12,3 +12,12 @@ DB_NAME=mydatabase
 SECRET_KEY= Thanh05@09@03@
 YOUTUBE_API_KEY=AIzaSyBUfgLHU84Fy9RMauCwOFOtLT6xYIvfsG4
 TZ=Asia/Ho_Chi_Minh
+
+
+# Zalopay
+ZALOPAY_APP_ID=2554
+ZALOPAY_KEY1=sdngKKJmqEMzvh5QQcdD2A9XBSKUNaYn
+ZALOPAY_KEY2=trMrHtvjo6myautxDUiAcYsVtaeQ8nhf
+ZALOPAY_ENDPOINT=https://sb-openapi.zalopay.vn/v2/create
+
+APP_URL=http://localhost:5173
