cập nhật bản mới 1.5 giao diện

--- a/server/src/.env
+++ b/server/src/.env
@@ -9,7 +9,7 @@ DB_PASSWORD=123  # Có thể cần mã hóa hoặc bảo vệ thông tin nhạy 
 DB_NAME=mydatabase
 
 # Khóa bí mật dùng để mã hóa và giải mã token
-SECRET_KEY= Thanh05@09@03@
+SECRET_KEY=qtlearningkey1234567890abcdefg!@
 YOUTUBE_API_KEY=AIzaSyBUfgLHU84Fy9RMauCwOFOtLT6xYIvfsG4
 TZ=Asia/Ho_Chi_Minh
 
