--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.5.1",
+        "@react-oauth/google": "^0.12.1",
         "@vitejs/plugin-react": "^4.3.3",
         "antd": "^5.21.6",
         "aos": "^2.3.4",
@@ -22,8 +23,11 @@
         "fullstack": "file:",
         "lodash": "^4.17.21",
         "lucide-react": "^0.454.0",
+        "qrcode": "^1.5.4",
+        "qrcode.react": "^4.1.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-google-login": "^5.2.2",
         "react-icons": "^5.3.0",
         "react-responsive": "^10.0.0",
         "react-router-dom": "^6.26.2",
@@ -37,6 +41,7 @@
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react-swc": "^3.5.0",
+        "dotenv-webpack": "^8.1.0",
         "eslint": "^9.9.0",
         "eslint-plugin-react": "^7.35.0",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
