--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
@@ -20,6 +21,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "googleapis": "^144.0.0",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
@@ -28,6 +30,8 @@
     "mysql2": "^3.11.3",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.13.3",
