--- a/server/src/.env
+++ b/server/src/.env
@@ -13,6 +13,8 @@ SECRET_KEY=qtlearningkey1234567890abcdefg!@
 YOUTUBE_API_KEY=AIzaSyBUfgLHU84Fy9RMauCwOFOtLT6xYIvfsG4
 TZ=Asia/Ho_Chi_Minh
 
+# Google login
+VITE_GOOGLE_CLIENT_ID=1038987169920-h0ec5fr9rgj10no8s7m7r9mo19iaaknb.apps.googleusercontent.com
 
 # Zalopay
 ZALOPAY_APP_ID=2554
